[gd_scene load_steps=53 format=3 uid="uid://ccvphxsudl8v"]

[ext_resource type="Script" path="res://assets/objects/enemies/hekara/hekara.gd" id="1_4omrw"]
[ext_resource type="Texture2D" uid="uid://q35l8o1kaukk" path="res://assets/objects/enemies/hekara/texture/spawn_radius.png" id="1_ucgny"]
[ext_resource type="AudioStream" uid="uid://bah4qw046qa88" path="res://assets/global/sounds/fx/315930__bevibeldesign__sucked-into-classroom.wav" id="2_0mxbs"]
[ext_resource type="Texture2D" uid="uid://b2jiuupuyp1np" path="res://assets/objects/enemies/hekara/texture/idle_l.png" id="3_ipfcb"]
[ext_resource type="Texture2D" uid="uid://c0mfxiynspj7t" path="res://assets/global/texture/smoke.png" id="3_ogxck"]
[ext_resource type="Texture2D" uid="uid://bp8ojxvle0m2l" path="res://assets/objects/enemies/hekara/texture/idle_r.png" id="4_6lio8"]
[ext_resource type="Texture2D" uid="uid://dfjn0vdhrhmhl" path="res://assets/global/texture/alert.png" id="8_mfyjl"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ibudf"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id="Curve_ileae"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.269231, 1), 1.4, 0.0, 0, 0, Vector2(0.763736, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4
metadata/_snap_count = 4

[sub_resource type="Curve" id="Curve_0uja7"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.313187, 1), 0.0, 0.0, 0, 0, Vector2(0.736641, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CircleShape2D" id="CircleShape2D_awfjf"]
radius = 7.64853

[sub_resource type="AtlasTexture" id="AtlasTexture_1bl0k"]
atlas = ExtResource("3_ipfcb")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dviop"]
atlas = ExtResource("3_ipfcb")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0ww6"]
atlas = ExtResource("3_ipfcb")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2td53"]
atlas = ExtResource("4_6lio8")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nicx8"]
atlas = ExtResource("4_6lio8")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2hqs"]
atlas = ExtResource("4_6lio8")
region = Rect2(48, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_7fhnp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bl0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dviop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0ww6")
}],
"loop": true,
"name": &"idle_l",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2td53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nicx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2hqs")
}],
"loop": true,
"name": &"idle_r",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vks0p"]
atlas = ExtResource("1_ucgny")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqao8"]
atlas = ExtResource("1_ucgny")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2gbj"]
atlas = ExtResource("1_ucgny")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljxwa"]
atlas = ExtResource("1_ucgny")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_eey7i"]
atlas = ExtResource("1_ucgny")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu08g"]
atlas = ExtResource("1_ucgny")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l4tu"]
atlas = ExtResource("1_ucgny")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn6ar"]
atlas = ExtResource("1_ucgny")
region = Rect2(1134, 0, 162, 162)

[sub_resource type="SpriteFrames" id="SpriteFrames_34qas"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vks0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqao8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2gbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljxwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eey7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu08g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l4tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn6ar")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 9.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qfa7t"]
atlas = ExtResource("8_mfyjl")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_myg2t"]
atlas = ExtResource("8_mfyjl")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxure"]
atlas = ExtResource("8_mfyjl")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ntoy"]
atlas = ExtResource("8_mfyjl")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk73l"]
atlas = ExtResource("8_mfyjl")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w1pw"]
atlas = ExtResource("8_mfyjl")
region = Rect2(120, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_slpm5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfa7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myg2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxure")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ntoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk73l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w1pw")
}],
"loop": false,
"name": &"alert",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_n81x2"]
resource_local_to_scene = true
radius = 100.0

[sub_resource type="Animation" id="Animation_ilfo8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_l"]
}

[sub_resource type="Animation" id="Animation_ci3j3"]
resource_name = "dead_l"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.0579823, 2.67366e-05, 0.233902, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"die"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_l"]
}

[sub_resource type="Animation" id="Animation_gx68w"]
resource_name = "dead_r"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.0579823, 2.67366e-05, 0.233902, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"die"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_r"]
}

[sub_resource type="Animation" id="Animation_s4yl3"]
resource_name = "idle_l"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_l"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y8ajo"]
resource_name = "idle_r"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_r"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jynsm"]
_data = {
"RESET": SubResource("Animation_ilfo8"),
"dead_l": SubResource("Animation_ci3j3"),
"dead_r": SubResource("Animation_gx68w"),
"idle_l": SubResource("Animation_s4yl3"),
"idle_r": SubResource("Animation_y8ajo")
}

[sub_resource type="Animation" id="Animation_iiifm"]
resource_name = "spawn"
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spawn_radius:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 9, 7, 6, 5, 4, 3, 5, 4, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("spawn_fx:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("sound:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_0mxbs")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lm0s0"]
resource_local_to_scene = true
_data = {
"RESET": SubResource("Animation_ilfo8"),
"spawn": SubResource("Animation_iiifm")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_480od"]
animation = &"dead_l"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j4cpn"]
animation = &"dead_r"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_mv2bs"]
blend_point_0/node = SubResource("AnimationNodeAnimation_480od")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_j4cpn")
blend_point_1/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pknir"]
animation = &"idle_l"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r5v8a"]
animation = &"idle_r"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_171r5"]
blend_point_0/node = SubResource("AnimationNodeAnimation_pknir")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_r5v8a")
blend_point_1/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_70j7i"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8gbmr"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_fq6j7"]
states/Start/position = Vector2(196, 99.3635)
states/dead/node = SubResource("AnimationNodeBlendSpace2D_mv2bs")
states/dead/position = Vector2(518.333, 115.333)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_171r5")
states/idle/position = Vector2(348.592, 116.551)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_70j7i"), "idle", "dead", SubResource("AnimationNodeStateMachineTransition_8gbmr")]
graph_offset = Vector2(-143, 0)

[node name="hekara" type="CharacterBody2D" groups=["enemy"]]
z_index = 3
disable_mode = 2
collision_mask = 0
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_4omrw")

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0mxbs")
volume_db = -10.0
max_polyphony = 5
bus = &"Hekara"

[node name="enable_process" type="VisibleOnScreenEnabler2D" parent="."]

[node name="spawn_fx" type="CPUParticles2D" parent="."]
process_mode = 3
z_index = 5
material = SubResource("CanvasItemMaterial_ibudf")
position = Vector2(-0.5, -0.5)
emitting = false
amount = 512
lifetime = 2.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
local_coords = true
texture = ExtResource("3_ogxck")
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 100.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
orbit_velocity_max = 1.5
orbit_velocity_curve = SubResource("Curve_ileae")
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.15
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_0uja7")
color = Color(1, 1, 0, 1)
anim_offset_max = 1.0

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_awfjf")

[node name="texture" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_7fhnp")
animation = &"idle_l"
frame = 2

[node name="spawn_radius" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 0.921569, 0.392157)
sprite_frames = SubResource("SpriteFrames_34qas")
frame = 8

[node name="alert" type="AnimatedSprite2D" parent="."]
z_index = 5
z_as_relative = false
position = Vector2(11, -12)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_slpm5")
animation = &"alert"

[node name="detection" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="shape" type="CollisionShape2D" parent="detection"]
shape = SubResource("CircleShape2D_n81x2")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jynsm")
}

[node name="spawn_anim" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_lm0s0")
}

[node name="spawn_duration" type="Timer" parent="."]

[node name="anim_blend" type="AnimationTree" parent="."]
callback_mode_discrete = 0
tree_root = SubResource("AnimationNodeStateMachine_fq6j7")
anim_player = NodePath("../anim")
parameters/dead/blend_position = Vector2(-0.997797, 0)
parameters/idle/blend_position = Vector2(-0.00220263, 0.0143886)

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="timeout" from="spawn_duration" to="." method="_on_spawn_duration_timeout"]
